--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,14 +1,16 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
+
+def appDependence = rootProject.ext.app
 
 android {
     namespace 'com.example.common'
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.common"
         minSdk 21
         targetSdk 32
         versionCode 1
@@ -33,11 +35,11 @@ android {
 }
 
 dependencies {
+    implementation appDependence.coreKtx
+    implementation appDependence.appCompat
+    implementation appDependence.material
+    testImplementation appDependence.junit
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.6.1'
-    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
