--- a/team/build.gradle
+++ b/team/build.gradle
@@ -1,6 +1,7 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -8,7 +9,6 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.team"
         minSdk 21
         targetSdk 32
         versionCode 1
