--- a/login/build.gradle
+++ b/login/build.gradle
@@ -1,11 +1,11 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
 }
 
 android {
-    namespace 'com.example.pmsandroid'
+    namespace 'com.example.login'
     compileSdk 32
 
     viewBinding{
@@ -13,7 +13,6 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.example.pmsandroid"
         minSdk 21
         targetSdk 32
         versionCode 1
@@ -38,13 +37,10 @@ android {
 }
 
 dependencies {
-    implementation project(':common')
-    implementation project(':login')
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.6.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'com.google.android.material:material:1.7.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
